--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.17)
 project(DisplayChars C)
 
 set(SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/DisplayChars.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/../common/drivers/uart/uart_send_char.c)
+    ${CMAKE_CURRENT_SOURCE_DIR}/common/drivers/uart/uart_send_char.c)
 set(TARGET_NAME DisplayChars.elf)
 
 option(CUSTOM_UART "Use a custom uart_send_char()" ON)
@@ -13,4 +13,4 @@ set(UART ON)
 
 add_executable(${TARGET_NAME} ${SOURCE})
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/../common/Common.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/common/Common.cmake)
